# IMR_NMI_Tracking

./: CMakeLists.txt  Parameters.txt  README.md  Tracker.txt
experiment/: CMakeLists.txt  test.cpp  testPixelSelector.cpp  test_FrameReader.cpp  test_GrayCentroid.cpp  test_Optimizer.cpp  test_Resdistribution.cpp  test_Tracker.cpp  test_Tracker.h  test_Tracker2.cpp  test_TrackingTrajectory.cpp  test_initializer.cpp  test_pcl.cpp
include/: CameraIntrinsic.h  DataType.h  Frame.h  FrameReader.h  FrameShell.h  ImmaturePoint.h  Intializer.h  MatrixAccumulators.h  Optimizer.h  PixelSelector.h  PixelSelectorInPyr.h  Point.h  Residual.h  Tracker.h  common.h  globalFuncs.h  parameter_reader.h
include/test/: testPixelSelector.h
src/: CMakeLists.txt  CameraIntrinsic.cpp  Frame.cpp  FrameReader.cpp  ImmaturePoint.cpp  Intializer.cpp  Optimizer.cpp  PixelSelector.cpp  Point.cpp  Residual.cpp  Tracker.cpp
